syntax = "proto3";

option go_package = "https://github.com/PanGami/microservices-nest-kafka/tree/main/gateway/proto"; 

package order;

service InventoryService {
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message CheckStockRequest {
  string itemId = 1;
}

message CheckStockResponse {
  bool inStock = 1;
  int32 quantity = 2;
}
